added test cases for POST fixing-files/
